# CleanStrike

./: CMakeLists.txt  Dockerfile  README.md  dockerCommands.sh
include/CleanStrike/: CarromBoard.cpp  Match.cpp  Player.cpp
include/CleanStrike/headers/: CarromBoard.hpp  Match.hpp  Player.hpp
logs/: ExampleLogFile.txt
src/: main.cpp
src/inputs/: inputFile.txt
tests/: CMakeLists.txt  CarromBoardTests.cpp  MatchTests.cpp  PlayerTests.cpp  removeSpacesTests.cpp  takeInputTests.cpp
